turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:14: error: ':' expected but ')' found.
def setCouleurSol(Color) {
                       ^LangtonsAnt:28: error: identifier expected but '}' found.
}
^