turmites.lessons.turmites.langton.Langton.scala.code
def step() {
  if (getCouleurSol()==Color.black) {
    setCouleurSol(Color.white)
    gauche()
    avance()
  }
  else {
    setCouleurSol(Color.black) {
      droite()
      avance()
    }
  }
}

def setCouleurSol(Color) {
  setCouleurBrosse(Color)
  baisseBrosse()
  leveBrosse()
}